basic classes for hexagon and vertex
implemented edges rendering

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="Hexagon.js"></script>
+    <script src="vertex.js"></script>
+
+    
+
   </body>
 </html>
