Basic functionality is done
added game over

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="sketch.js"></script>
     <script src="Hexagon.js"></script>
     <script src="vertex.js"></script>
+    <script src="minimax.js"></script>
 
     
 
